Bug 1453078 - Do not assume segments are all non-null when not all null. r=padenot, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D9545

--HG--
extra : source : 54761b7fd534c3f3fe36c5e06afbf3d803ae5332